# substrate-node-template

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
